minor ui fixes with alignment and colors

--- a/src/Components/Messages/Message/Message.css
+++ b/src/Components/Messages/Message/Message.css
@@ -28,6 +28,7 @@
 
 .their-message .message-text {
 	background-color: #13bceb;
+	color: #444;
 }
 
 .message-author {
